hide carousel overflow on large media to prevent side scroll

--- a/app/styles/components/timeline-item-nav/slideshow/_slideshow.scss
+++ b/app/styles/components/timeline-item-nav/slideshow/_slideshow.scss
@@ -253,6 +253,10 @@
     margin: 0 auto;
   }
 
+  .timeline-item-nav-slideshow-panels-carousel {
+    overflow: hidden;
+  }
+
   .timeline-item-nav-post {
     max-height: 440px;
   }
